# server/api/v1/app/app_channel.go
@@ -21,10 +21,9 @@ var hkChannelService = service.ServiceGroupApp.AppServiceGroup.Community.HkChann
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Success 200  {object}  response.Response{data= []community.HkChannel,msg=string}  "返回[]community.HkChannel"
+// @Success 200  {object}  response.Response{data=[]community.HkChannel,msg=string}  "返回[]community.HkChannel"
 // @Router /hkChannel/getChannelList [get]
 func (hkChannelApi *HkChannelApi) GetChannelList(c *gin.Context) {
-
 	if list, _, err := hkChannelService.GetChannelInfoList(); err != nil {
 		global.GVA_LOG.Error("获取失败!", zap.Error(err))
 		response.FailWithMessage("获取失败", c)
@@ -41,7 +40,7 @@ func (hkChannelApi *HkChannelApi) GetChannelList(c *gin.Context) {
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Success 200  {object}  response.Response{data= []community.HkChannel,msg=string}  "返回[]community.HkChannel"
+// @Success 200 {object} response.Response{data=[]community.HkChannel,msg=string} "返回[]community.HkChannel"
 // @Router /hkChannel/getUserChannelList [get]
 func (hkChannelApi *HkChannelApi) GetUserChannelList(c *gin.Context) {
 	var pageInfo communityReq.HkChannelSearch
@@ -90,4 +89,56 @@ func (hkChannelApi *HkChannelApi) SetUserChannel(c *gin.Context) {
 	} else {
 		response.OkWithMessage("创建成功", c)
 	}
+}
+
+// GetNewsList 获取资讯列表
+// @Tags HkChannel
+// @Summary 获取资讯列表
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body communityReq.ParamSetUserChannel true "获取资讯列表"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"成功"}"
+// @Router /hkChannel/getNewsList [post]
+func (hkChannelApi *HkChannelApi) GetNewsList(c *gin.Context) {
+
+}
+
+// GetNewsTopList 获取资讯置顶列表
+// @Tags HkChannel
+// @Summary 获取资讯置顶列表
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body communityReq.ParamSetUserChannel true "获取资讯置顶列表"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"成功"}"
+// @Router /hkChannel/getNewsTopList [post]
+func (hkChannelApi *HkChannelApi) GetNewsTopList(c *gin.Context) {
+
+}
+
+// GetNearbyHotTopicList 获取附近热门话题列表
+// @Tags HkChannel
+// @Summary 获取附近热门话题列表
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body communityReq.ParamSetUserChannel true "获取附近热门话题列表"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"成功"}"
+// @Router /hkChannel/getNearbyHotTopicList [post]
+func (hkChannelApi *HkChannelApi) GetNearbyHotTopicList(c *gin.Context) {
+
+}
+
+// GetNearbyDynamicList 获取附近动态列表
+// @Tags HkChannel
+// @Summary 获取附近动态列表
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body communityReq.ParamSetUserChannel true "获取附近动态列表"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"成功"}"
+// @Router /hkChannel/getNearbyDynamicList [post]
+func (hkChannelApi *HkChannelApi) GetNearbyDynamicList(c *gin.Context) {
+
 }
